--- a/package.json
+++ b/package.json
@@ -1,38 +1,42 @@
 {
-	"name": "obsidian-embedding",
-	"version": "1.0.0",
-	"type": "module",
-	"description": "Markdown Embedding Plugin",
-	"main": "main.js",
-	"scripts": {
-		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "MIT",
-	"devDependencies": {
-		"@jest/globals": "^29.7.0",
-		"@types/node": "^16.11.6",
-		"@types/react": "^18.2.70",
-		"@types/react-dom": "^18.2.22",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
-		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
-		"jest": "^29.7.0",
-		"nodemon": "^3.1.0",
-		"ts-jest": "^29.1.2",
-		"ts-node": "^10.9.2",
-		"tslib": "2.4.0",
-		"typescript": "4.7.4"
-	},
-	"dependencies": {
-		"electron": "^29.1.5",
-		"mathjs": "^12.4.1",
-		"obsidian": "latest",
-		"pca-js": "^1.0.2",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
-	}
+    "name": "obsidian-embedding",
+    "version": "1.0.0",
+    "type": "module",
+    "description": "Markdown Embedding Plugin",
+    "main": "main.js",
+    "scripts": {
+        "dev": "node esbuild.config.mjs",
+        "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "MIT",
+    "devDependencies": {
+        "@jest/globals": "^29.7.0",
+        "@types/node": "^16.11.6",
+        "@types/react": "^18.2.70",
+        "@types/react-dom": "^18.2.22",
+        "@typescript-eslint/eslint-plugin": "5.29.0",
+        "@typescript-eslint/parser": "5.29.0",
+        "builtin-modules": "3.3.0",
+        "esbuild": "0.17.3",
+        "jest": "^29.7.0",
+        "nodemon": "^3.1.0",
+        "prettier": "^3.2.5",
+        "ts-jest": "^29.1.2",
+        "ts-node": "^10.9.2",
+        "tslib": "2.4.0",
+        "typescript": "4.7.4"
+    },
+    "dependencies": {
+        "@types/d3": "^7.4.3",
+        "d3": "^7.9.0",
+        "electron": "^29.1.5",
+        "lucide-react": "^0.372.0",
+        "mathjs": "^12.4.1",
+        "obsidian": "latest",
+        "pca-js": "^1.0.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    }
 }
