--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,28 @@
 {
     "compilerOptions": {
-      "jsx": "react",
-      "allowSyntheticDefaultImports": true,
-      "baseUrl": ".",
-      "inlineSourceMap": true,
-      "inlineSources": true,
-      "module": "ESNext",
-      "target": "ES6",
-      "allowJs": true,
-      "noImplicitAny": true,
-      "moduleResolution": "node",
-      "importHelpers": true,
-      "isolatedModules": true,
-      "strictNullChecks": true,
-      "lib": [
-        "DOM",
-        "ES5",
-        "ES6",
-        "ES7"
-      ],
-      "esModuleInterop": true
+        "jsx": "react",
+        "allowSyntheticDefaultImports": true,
+        "baseUrl": ".",
+        "inlineSourceMap": true,
+        "inlineSources": true,
+        "module": "ESNext",
+        "target": "ES6",
+        "allowJs": true,
+        "noImplicitAny": true,
+        "moduleResolution": "node",
+        "importHelpers": true,
+        "isolatedModules": true,
+        "strictNullChecks": true,
+        "lib": [
+            "DOM",
+            "ES5",
+            "ES6",
+            "ES7"
+        ],
+        "esModuleInterop": true
     },
     "include": [
-      "**/*.ts"
-, "view.tsx"    ]
-  }
+        "**/*.ts",
+        "embeddingView.tsx"
+    ]
+}
